main.css
html {
    display: table;
    margin: 100px 30px;
}
body {
    display: table-row;
    background-image: url(Math_Background.png);
}
.margin {
  margin: 0 !important;
}
    
#background_img { 
    width: 100vw;
    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    z-index: -10;
}

#dim_button {
    width: 100px;
    height: 20px;
}

#password_help {
    font-family: sans-serif; 
    font-size: 12px; 
    color: red; 
    left: 54px; 
    position: relative; 
    visibility: hidden
}

#signup_button {
    background-color: lightgrey;
}

#header_text {
    color: white;
    height: 37px;
    letter-spacing: 0.5px;
    text-align: center;
    text-decoration: none solid rgb(255, 255, 255);
    border: none;
    font: normal normal 600 normal 40px / 37.7px "Whitney A", "Whitney B", Avenir, Helvetica, sans-serif;
    outline: none 0px;
}

#sub_text {
    font-size: 14px; 
    font-family: sans-serif; 
    font-weight: 100; 
    line-height: 0px;
}

#header_logo {
    height: 40px;
    position: fixed;
    left: 8px;
    top: 8px;
}

#password_text {
    width: 470px;
}

#login-page {
    position: relative;
    align-content: center;
}
    
#header_text {
    font-size: 30px;
    width: 360px;
    display: block;
    margin: auto;
    line-height: 30px;
}

#password_text, #email_text, #signup_text {
    width: 360px;
}

#login-page {
    width: 400px;
}

#password_help {
    width: 300px;
}

@media only screen and (max-width: 736px) and (orientation: landscape) {
    #header_text {
        width: 500px;
        position: relative;
        top: 40px;
        display: block;
        margin: auto
    }
    
}

.number {
    font-family="Roboto Condensed";
    color: #9897b5;
    font-size: 80px;
    position: absolute;
    top: 72px;
    margin-left: 20px;
    
    font-style: italic;
    
}

#number2 {
    margin-top: 157.5px;
}

#number3 {
    margin-top: 315px;
}

.text1 {
    z-index: 3;
    position: absolute;
    top: 100px;
    color: white;
    letter-spacing: 0.9px;
    margin-left: 20px;
    font: normal normal 500 normal 22px / 37.7px "Whitney A", "Whitney B", Avenir, Helvetica, sans-serif;
}

.subtext1 {
    position: absolute;
    margin: 40px 0px 0px 80px;
    color: lightgrey;
    letter-spacing: 0.9px;
    font-family="Roboto Condensed";
    font-size: 14px;
    font-style: italic;
}

#signup_cell {
    position: relative; 
    width: 70vw;
}

.question_title {
    position: relative;
    top: 50px;
    height: 40px;
    width: 25vw;
    font: normal normal 600 normal 16px / 37.7px "Roboto Condensed", Avenir, Helvetica, sans-serif;
    padding-left: 15px;
    padding-top: 3px;
    background-color: #D3D3D3;
    z-index: 2;
    right: 30px;;
    margin-left: 50px;
    border-bottom: 2px solid #06274E;
    color: white;
    transition: top 600ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
}

.questions_click {
    cursor: pointer
}

#answer1 {
    z-index: 1;
    height: auto;
    position: relative;
    display: inline-block;
    top: -340px;
    width: 25vw;
    font: normal normal 600 normal 12px / 16px "Roboto Condensed", Avenir, Helvetica, sans-serif;
    padding: 5px 15px;
    background-color: white;
    color: #4A4A4A;
    transition: top 600ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
}

#answers {
    position: absolute;
    height: auto;
    width: 25vw;
    top: 150px;
    margin-left: 20px;
    overflow-y: hidden;
}

#answer2 {
    z-index: 1;
    position: relative;
    display: inline-block;
    top: -1000px;
    width: 25vw;
    font: normal normal 600 normal 12px / 16px "Roboto Condensed", Avenir, Helvetica, sans-serif;
    padding: 5px 15px;
    background-color: white;
    color: #4A4A4A;
    transition: top 600ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
}

#answer3 {
    z-index: 1;
    position: relative;
    top: -1000px;
    display: inline-block;
    width: 25vw;
    font: normal normal 600 normal 12px / 16px "Roboto Condensed", Avenir, Helvetica, sans-serif;
    padding: 5px 15px;
    background-color: white;
    color: #4A4A4A;
    transition: top 600ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
}

#answer4 {
    z-index: 1;
    position: relative;
    top: -1200px;
    display: inline-block;
    width: 25vw;
    font: normal normal 600 normal 12px / 16px "Roboto Condensed", Avenir, Helvetica, sans-serif;
    padding: 5px 15px;
    background-color: white;
    color: #4A4A4A;
    transition: top 600ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
}

#answer5 {
    z-index: 1;
    position: relative;
    top: -1200px;
    display: inline-block;
    width: 25vw;
    font: normal normal 600 normal 12px / 16px "Roboto Condensed", Avenir, Helvetica, sans-serif;
    padding: 5px 15px;
    background-color: white;
    color: #4A4A4A;
    transition: top 600ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
}

@media only screen and (max-width: 904px) {
    #signup_cell {
        display: block;
        margin: auto;
        width: 100px;
    }
    
    #steps {
        visibility: hidden;
    }
    
    #tutor_card_container {
        display: none;
        visibility: hidden;
    }
    
    #tutor_gradient {
        display: none;
        visibility: hidden;
    }
    
    body {
        background-color: transparent;
        background-image: url(Math_Background.png);
    }

}

#tutor_card_container {
    width: 26vw;
    height: 430px;
    position: relative;
    float: left;
    margin-left: -1.6vw;
    top: 50px;
    background-color: white;
    overflow: hidden;
}

.tutor_card {
    float: left;
    position: absolute;
    width: 23vw;
    height: 420px;
    z-index: 39;
    min-height: 300px;
    margin-top, margin-bottom: 5px;
    margin-left: 1vw;
    margin-right: 1vw;
    border-radius: 2.5px;
	background-color: #ffffff;
	background-color: var(--white);
	box-shadow: -1px 1px 5px 0 rgba(0, 0, 0, 0.1);
    transition: left 1200ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
}

.tutor_name {
    width: 20vw;
    margin: 2vw 0vw 0vw 2vw;
	height: 30px;
	font-family: Roboto, sans-serif;
	font-size: 1.7vw;
	font-weight: 500;
	line-height: 1.5;
	color: #4a4a4a;
}

.tutor_title {
    width: 23vw;
    margin-top: -.65vw;
    margin-left: 2vw;
	height: 30px;
	font-family: Roboto, sans-serif;
	font-size: 1vw;
	font-weight: 300;
	line-height: 1.5;
	color: #4a4a4a;
}

.tutor_bio {
    width: 20vw;
    margin-left: 2vw;
	display: inline-block;
	font-family: Roboto, sans-serif;
	font-size: .8vw;
	font-weight: 300;
	line-height: 1.5;
    overflow: scroll;
	color: #4a4a4a;
}

#tutor_kelsey {
    left: 32vw;
}

#tutor_gradient {
    position: absolute;
    width: 18vw;
    height: 390px;
    right: 0px;
    z-index: 40;
    top: 35px;
}

#next_tutor {
    cursor: pointer;
}

#tutor_caroline {
    left: -32vw;
    visibility: visible;
}

#tutor_adam {
    left: 64vw;
    visibility: visible;
}

@media only screen and (min-width: 881px) {
    .tutor_name {
        font-size: 15.81px;   
    }
    
    .tutor_title {
        font-size: 13.02px;
    }
    
    .tutor_bio {
        font-size: 10.572px;
    }
    
    #tutor_sub_head {
        font-size: 18px;
    }
    
    #tutor_description, #background_check_text {
        font-size: 12px;
    }
}

